--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Objective is to secure a challenging role in an esteemed organization so that i 
           <h2>Resume</h2>
           <p></p>
         </div>
-           <button class="btn btn-primary"><a href="LakshmanKumar_Resume.rtf" style="color: black;" >Resume</a></button> 
+           <button class="btn btn-primary"><a href="LakshmanKumar_Resume.pdf" style="color: black;" >Resume</a></button> 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
